--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 
   <body>
-    <a href="piwnica.html">:)</a>
+    <a href="piwnica.html" style = "position:relative; left:0px; top:-585px;">:)</a>
+
+    <img src="C4V1US Budynn - bialy mis.jpg" style = "position:relative; left:30px; top:0px;" height="600">
   </body>
 
   
