--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
   <head>
     <title>porzuccie wszelka nadzieje ci ktorzy tu wchodzicie</title>
+    <link rel="icon" href="logo_ru.png">
+    <link rel="stylesheet" href="styles.css">
   </head>
 
 
@@ -13,6 +15,11 @@
     <a href="piwnica.html" style = "position:relative; left:0px; top:-585px;">:)</a>
 
     <img src="C4V1US Budynn - bialy mis.jpg" style = "position:relative; left:30px; top:0px;" height="600">
+
+    <p style = "position:relative; left:700px; top:-500px; font-size: 50px;">"nie każda pizda to</p>
+    <p style = "position:relative; left:700px; top:-530px; font-size: 50px;">palacz ale każdy palacz</p>
+    <p style = "position:relative; left:700px; top:-560px; font-size: 50px;">palacz to pizda"</p>
+    <p style = "position:relative; left:700px; top:-590px; font-size: 50px;">~soles</p>
   </body>
 
   
