--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     <p style = "position:relative; left:700px; top:-530px; font-size: 50px;">palacz ale każdy palacz</p>
     <p style = "position:relative; left:700px; top:-560px; font-size: 50px;">palacz to pizda"</p>
     <p style = "position:relative; left:700px; top:-590px; font-size: 50px;">~soles</p>
+
+    <p>changelog (07/09/22 19:25):</p>
+    <p>-added ru icon as website icon,</p>
+    <p>-added soles quote.</p>
+    <p>changelog zostanie usuniety po 7 dniach. (jesli ktos mi przypomni, lmao)</p>
+  
   </body>
 
   
