--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <p>-added ru icon as website icon,</p>
     <p>-added soles quote.</p>
     <p>changelog zostanie usuniety po 7 dniach. (jesli ktos mi przypomni, lmao)</p>
-  
+    <p>~Khenzii</p>
   </body>
 
   
