--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <img src="C4V1US Budynn - bialy mis.jpg" style = "position:relative; left:30px; top:0px;" height="600">
 
     <p style = "position:relative; left:700px; top:-500px; font-size: 50px;">"nie każda pizda to</p>
-    <p style = "position:relative; left:700px; top:-530px; font-size: 50px;">palacz ale każdy palacz</p>
+    <p style = "position:relative; left:700px; top:-530px; font-size: 50px;">palacz ale każdy</p>
     <p style = "position:relative; left:700px; top:-560px; font-size: 50px;">palacz to pizda"</p>
     <p style = "position:relative; left:700px; top:-590px; font-size: 50px;">~soles</p>
 
-    <p>changelog (07/09/22 19:25):</p>
-    <p>-added ru icon as website icon,</p>
-    <p>-added soles quote.</p>
+    <p>changelog (07/09/22 20:00):</p>
+    <p>-dodano logo ru jako ikone strony,</p>
+    <p>-dodano cytat solesa.</p>
     <p>changelog zostanie usuniety po 7 dniach. (jesli ktos mi przypomni, lmao)</p>
     <p>~Khenzii</p>
   </body>
