--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container">
             <p><span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
         </div>
-        <div class="link-container">
+        <div class="link-container" style="width:auto;height:auto;max-height:100%;max-width:100%;">
             <a style="text-decoration: none;" href="./soles/soles.html" >
                 <img src="./img/soles.png">
             </a>
@@ -40,7 +40,7 @@
             </a>
         </div>
 
-        <div class="link-container-2">
+        <div class="link-container-2" style="width:auto;height:auto;max-height:100%;max-width:100%;">
             <a style="text-decoration: none;" href="./karwius/karwius.html" >
                 <img src="./img/karwius.png">
             </a>
