--- a/index.html
+++ b/index.html
@@ -12,53 +12,45 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet"/> 
     </head>
     <body scroll="no">
-        <div class="img-container">
+        <div class="img-container" style="top: 20vh;">
             <img src="./img/favicon.png">
         </div>
         <div class="container">
             <p><span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
         </div>
-        <div class="link-container" style="width:auto;height:auto;max-height:100%;max-width:100%;">
-            <a style="text-decoration: none;" href="./soles/soles.html" >
-                <img src="./img/soles.png">
-            </a>
-
-
-            <img src="./img/dot.png">
-
-
-            <a style="text-decoration: none;" href="./sledziu/sledziu.html">
-                <img src="./img/sledz.png">
-            </a>
-
-
-            <img style="text-decoration: none;" src="./img/dot.png">
-
-
-            <a href="./budyn/budyn.html">
-                <img src="./img/budyn.png">
-            </a>
-        </div>
-
-        <div class="link-container-2" style="width:auto;height:auto;max-height:100%;max-width:100%;">
+        <div class="link-container" style="top: 65vh;">
             <a style="text-decoration: none;" href="./karwius/karwius.html" >
                 <img src="./img/karwius.png">
             </a>
 
-
-            <img src="./img/dot.png">
-
+            <img style="text-decoration: none;" src="./img/dot.png">
 
             <a style="text-decoration: none;" href="./fizo/fizo.html">
                 <img src="./img/fizo.png">
             </a>
 
-
             <img style="text-decoration: none;" src="./img/dot.png">
-
 
             <a href="./khenzii/khenzii.html">
                 <img src="./img//khenzii.png">
+            </a>
+        </div>
+
+        <div class="link-container" style="top: 50vh;">
+            <a style="text-decoration: none; top: 55vh;" href="./soles/soles.html">
+                <img src="./img/soles.png">
+            </a>
+
+            <img style="text-decoration: none;" src="./img/dot.png">
+
+            <a style="text-decoration: none;" href="./sledziu/sledziu.html">
+                <img src="./img/sledz.png">
+            </a>
+
+            <img style="text-decoration: none;" src="./img/dot.png">
+
+            <a href="./budyn/budyn.html">
+                <img src="./img/budyn.png">
             </a>
         </div>
         <script src="./js/type.js"></script>
