--- a/karwius/karwius.html
+++ b/karwius/karwius.html
@@ -22,7 +22,16 @@
             <a style="text-decoration: none;" href="https://www.youtube.com/channel/UCiA3DehybaQNRtf34jeenmA">
                 <img src="./img/youtube.png">
             </a>
+
             <img style="text-decoration: none;" src="./img/dot.png">
+
+            
+            <a href="karwius nie podal mi jeszcze linka do jego kanalu na twitchu ;(, nie moge go znalesc lmao">
+                <img src="./img/twitch.png">
+            </a>
+
+            <img style="text-decoration: none;" src="./img/dot.png">
+
             <a href="https://steamcommunity.com/profiles/76561199192533203">
                 <img src="./img/steam.png">
             </a>
