--- a/karwius/karwius.html
+++ b/karwius/karwius.html
@@ -26,7 +26,7 @@
             <img style="text-decoration: none;" src="./img/dot.png">
 
             
-            <a href="karwius nie podal mi jeszcze linka do jego kanalu na twitchu ;(, nie moge go znalesc lmao">
+            <a href="../index.html">
                 <img src="./img/twitch.png">
             </a>
 
