--- a/karwius/karwius.html
+++ b/karwius/karwius.html
@@ -25,6 +25,13 @@
 
             <img style="text-decoration: none;" src="./img/dot.png">
 
+            
+            <a href="../index.html">
+                <img src="./img/twitch.png">
+            </a>
+
+            <img style="text-decoration: none;" src="./img/dot.png">
+
             <a href="https://steamcommunity.com/profiles/76561199192533203">
                 <img src="./img/steam.png">
             </a>
