--- a/karwius/karwius.html
+++ b/karwius/karwius.html
@@ -26,7 +26,7 @@
             <img style="text-decoration: none;" src="./img/dot.png">
 
             
-            <a href="../index.html">
+            <a href="https://www.twitch.tv/karwius">
                 <img src="./img/twitch.png">
             </a>
 
