--- a/fizo/fizo.html
+++ b/fizo/fizo.html
@@ -19,8 +19,8 @@
             <p><span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
         </div>
         <div class="link-container">
-            <a style="text-decoration: none;">
-                <img src="./img/smutny_usmiech.png">
+            <a href="https://www.youtube.com/channel/UCbzA5IQhVgU4zLrUTtUAeDw">
+                <img src="./img/youtube.png">
             </a>
         </div>
         <script src="./js/type.js"></script>
