--- a/index.html
+++ b/index.html
@@ -18,24 +18,8 @@
         <div class="container">
             <p><span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
         </div>
-        <div class="link-container" style="top: 65vh;">
-            <a style="text-decoration: none;" href="./karwius/karwius.html" >
-                <img src="./img/karwius.png">
-            </a>
 
-            <img style="text-decoration: none;" src="./img/dot.png">
-
-            <a style="text-decoration: none;" href="./fizo/fizo.html">
-                <img src="./img/fizo.png">
-            </a>
-
-            <img style="text-decoration: none;" src="./img/dot.png">
-
-            <a href="./khenzii/khenzii.html">
-                <img src="./img//khenzii.png">
-            </a>
-        </div>
-        
+                
         <div class="link-container" style="top: 50vh;">
             <a style="text-decoration: none; top: 55vh;" href="./soles/soles.html">
                 <img src="./img/soles.png">
@@ -49,10 +33,35 @@
 
             <img style="text-decoration: none;" src="./img/dot.png">
 
-            <a href="./budyn/budyn.html">
+            <a style="text-decoration: none;" href="./budyn/budyn.html">
                 <img src="./img/budyn.png">
             </a>
         </div>
+
+        <div class="link-container" style="top: 60vh;">
+            <a style="text-decoration: none;" href="./karwius/karwius.html" >
+                <img src="./img/karwius.png">
+            </a>
+
+            <img style="text-decoration: none;" src="./img/dot.png">
+
+            <a style="text-decoration: none;" href="./fizo/fizo.html">
+                <img src="./img/fizo.png">
+            </a>
+
+            <img style="text-decoration: none;" src="./img/dot.png">
+
+            <a style="text-decoration: none;" href="./khenzii/khenzii.html">
+                <img src="./img//khenzii.png">
+            </a>
+        </div>
+
+        <div class="link-container" style="top: 68vh">
+            <a style="text-decoration: none;" href="./igolek/igolek.html">
+                <img src="./img/igolek.png">
+            </a>
+        </div>
+
         <script src="./js/type.js"></script>
     </body>
 </html>
